--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,14 @@
   <url>http://maven.apache.org</url>
   <dependencies>
 
+      <!-- https://mvnrepository.com/artifact/net.sf.ehcache/ehcache -->
+      <dependency>
+          <groupId>net.sf.ehcache</groupId>
+          <artifactId>ehcache</artifactId>
+          <version>2.10.4</version>
+      </dependency>
+
+
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -43,8 +51,8 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <configuration>
-                  <source>1.6</source>
-                  <target>1.6</target>
+                  <source>8</source>
+                  <target>8</target>
               </configuration>
           </plugin>
       </plugins>
