--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,23 @@
       <artifactId>log4j</artifactId>
       <version>1.2.14</version>
     </dependency>
+      <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus -->
+      <dependency>
+          <groupId>com.baomidou</groupId>
+          <artifactId>mybatis-plus</artifactId>
+          <version>2.3</version>
+      </dependency>
+
+      <!--Jsoup是一款Java的HTML解析器，可直接解析某个URL地址、HTML文本内容。它提供了一套非常省力的API，可通过DOM，CSS以及类似于jQuery的操作方法来取出和操作数据。-->
+      <!--Jsoup的主要功能如下：-->
+      <!--1.从一个URL，文件或字符串中解析HTML；-->
+      <!--2.使用DOM或CSS选择器来查找、取出数据；-->
+      <!--3.可操作HTML元素、属性、文本；-->
+      <dependency>
+          <groupId>org.jsoup</groupId>
+          <artifactId>jsoup</artifactId>
+          <version>1.7.2</version>
+      </dependency>
 
   </dependencies>
   <build>
